--- a/role/meta/main.yml
+++ b/role/meta/main.yml
@@ -2,25 +2,13 @@
 dependencies: []
 
 galaxy_info:
-  author: geerlingguy
+  author: "Your Name"
   description: HAProxy installation and configuration.
-  company: "Midwestern Mac, LLC"
-  license: "license (BSD, MIT)"
+  company: "Your Company"
+  license: "Your license"
   min_ansible_version: 2.2
   platforms:
     - name: EL
       versions:
         - 6
         - 7
-    - name: Ubuntu
-      versions:
-        - precise
-        - trusty
-        - xenial
-  galaxy_tags:
-    - web
-    - networking
-    - cloud
-    - haproxy
-    - loadbalancer
-    - http
